force-app/main/default/objects/Property_Mortgage_lien_all__c/Property_Mortgage_lien_all__c.object-meta.xml
<CustomObject>
    <description>All available liens / mortgages, including those that existed under prior owners.</description>
    <label>Property Mortgage lien all</label>
    <nameField>
        <label>Property Mortgage lien all Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Property Mortgage liens all</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>