force-app/main/default/objects/Property_Mortgage_lien_all__c/fields/amount__c.field-meta.xml
<CustomField>
    <fullName>amount__c</fullName>
    <description>Amount in dollars financed</description>
    <inlineHelpText>Amount in dollars financed</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>