force-app/main/default/objects/Property_Mortgage_lien_all__c/fields/arm_index__c.field-meta.xml
<CustomField>
    <fullName>arm_index__c</fullName>
    <description>ARM index followed by the lien. One of [cd_6m, cofi, libor_1m, libor_1y, libor_2m, libor_3m, libor_6m, mta_12m, prime, tbill_10y, tbill_1y, tbill_3y, tbill_5y, tbill_6m]</description>
    <inlineHelpText>ARM index followed by the lien. One of [cd_6m, cofi, libor_1m, libor_1y, libor_2m, libor_3m, libor_6m, mta_12m, prime, tbill_10y, tbill_1y, tbill_3y, tbill_5y, tbill_6m]</inlineHelpText>
    <label>Arm Index</label>
    <length>30</length>
    <type>Text</type>
</CustomField>