force-app/main/default/objects/Property_Mortgage_lien_all__c/fields/due_date__c.field-meta.xml
<CustomField>
    <fullName>due_date__c</fullName>
    <description>The date the lien is scheduled to be paid-in-full</description>
    <inlineHelpText>The date the lien is scheduled to be paid-in-full</inlineHelpText>
    <label>Due date</label>
    <type>Date</type>
</CustomField>