force-app/main/default/objects/Property_Mortgage_lien_all__c/fields/event_type__c.field-meta.xml
<CustomField>
    <fullName>event_type__c</fullName>
    <description>The type of loan acquired</description>
    <inlineHelpText>The type of loan acquired</inlineHelpText>
    <label>Event type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>