force-app/main/default/objects/Property_Mortgage_lien_all__c/fields/fifteen_yr__c.field-meta.xml
<CustomField>
    <fullName>fifteen_yr__c</fullName>
    <description>The FRED 15-year mortgage rate at the the time of origination</description>
    <inlineHelpText>The FRED 15-year mortgage rate at the the time of origination</inlineHelpText>
    <label>Fifteen yr</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>