force-app/main/default/objects/Property_Mortgage_lien_all__c/fields/grantee_1_forenames__c.field-meta.xml
<CustomField>
    <fullName>grantee_1_forenames__c</fullName>
    <description>First name of first person listed on lien</description>
    <inlineHelpText>First name of first person listed on lien</inlineHelpText>
    <label>Grantee 1 Forenames</label>
    <length>50</length>
    <type>Text</type>
</CustomField>