force-app/main/default/objects/Property_Mortgage_lien_all__c/fields/grantee_2__c.field-meta.xml
<CustomField>
    <fullName>grantee_2__c</fullName>
    <description>Last name of second person listed on lien</description>
    <inlineHelpText>Last name of second person listed on lien</inlineHelpText>
    <label>Grantee 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>