force-app/main/default/objects/Property_Mortgage_lien_all__c/fields/hc_interest_rate__c.field-meta.xml
<CustomField>
    <fullName>hc_interest_rate__c</fullName>
    <description>HouseCanary estimated interest rate. Will differ from “interest_rate” if and only if there is a stated interest rate in the recorder’s books</description>
    <inlineHelpText>HouseCanary estimated interest rate. Will differ from “interest_rate” if and only if there is a stated interest rate in the recorder’s books</inlineHelpText>
    <label>HC interest rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>