force-app/main/default/objects/Property_Mortgage_lien_all__c/fields/heloc__c.field-meta.xml
<CustomField>
    <fullName>heloc__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the loan is a home equity line of credit.</description>
    <inlineHelpText>Whether the loan is a home equity line of credit.</inlineHelpText>
    <label>Heloc</label>
    <type>Checkbox</type>
</CustomField>