force-app/main/default/objects/Property_Mortgage_lien_all__c/fields/interest_rate__c.field-meta.xml
<CustomField>
    <fullName>interest_rate__c</fullName>
    <description>The estimated interest rate, based on mortgage_years and FRED rates</description>
    <inlineHelpText>The estimated interest rate, based on mortgage_years and FRED rates</inlineHelpText>
    <label>Interest Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>