force-app/main/default/objects/Property_Mortgage_lien_all__c/fields/lender_type__c.field-meta.xml
<CustomField>
    <fullName>lender_type__c</fullName>
    <description>Entity making the loan. One of [bank, credit_union, finance_company, government, individual_private_party, insurance, internet, lending_institution, mortgage_company, other_company, reo_foreclosure_company, seller, subprime_lender]</description>
    <inlineHelpText>Entity making the loan. One of [bank, credit_union, finance_company, government, individual_private_party, insurance, internet, lending_institution, mortgage_company, other_company, reo_foreclosure_company, seller, subprime_lender]</inlineHelpText>
    <label>Lender Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>