force-app/main/default/objects/Property_Mortgage_lien_all__c/fields/lien_type__c.field-meta.xml
<CustomField>
    <fullName>lien_type__c</fullName>
    <description>The type of lien acquired. One of [arm, commercial, construction, conventional, fannie_mae_freddie_mac (These entities don’t originate anymore; most conventional meet criteria), farmers_home_administration, fha, land_contract, open_end, revolving_credit_line, second_to_cover_down_payment, seller_take_back, stand_alone_first, stand_alone_refi, stand_alone_second, state_veterans, usda, va]</description>
    <inlineHelpText>The type of lien acquired. One of [arm, commercial, construction, conventional, fannie_mae_freddie_mac (These entities don’t originate anymore; most conventional meet criteria), farmers_home_administration, fha, land_contract, open_end, revolving_credit_line, second_to_cover_down_payment, seller_take_back, stand_alone_first, stand_alone_refi, stand_alone_second, state_veterans, usda, va]</inlineHelpText>
    <label>Lien Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>