force-app/main/default/objects/Property_Mortgage_lien_all__c/fields/mortgage_years__c.field-meta.xml
<CustomField>
    <fullName>mortgage_years__c</fullName>
    <description>Estimated mortgage timeframe. Calculated as floor(due_date - record_date)</description>
    <inlineHelpText>Estimated mortgage timeframe. Calculated as floor(due_date - record_date)</inlineHelpText>
    <label>Mortgage Years</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>