force-app/main/default/objects/Property_Mortgage_lien_all__c/fields/record_book__c.field-meta.xml
<CustomField>
    <fullName>record_book__c</fullName>
    <description>Record book number for the recorded lien. A unique transaction in many counties may be defined in the recorder’s books by a unique: record_book, record_page, record_doc.</description>
    <inlineHelpText>Record book number for the recorded lien. A unique transaction in many counties may be defined in the recorder’s books by a unique: record_book, record_page, record_doc.</inlineHelpText>
    <label>Record Book</label>
    <length>40</length>
    <type>Text</type>
</CustomField>