force-app/main/default/objects/Property_Mortgage_lien_all__c/fields/record_date__c.field-meta.xml
<CustomField>
    <fullName>record_date__c</fullName>
    <description>Date the lien originated</description>
    <inlineHelpText>Date the lien originated</inlineHelpText>
    <label>Record Date</label>
    <type>Date</type>
</CustomField>