force-app/main/default/objects/Property_Mortgage_lien_all__c/fields/record_doc__c.field-meta.xml
<CustomField>
    <fullName>record_doc__c</fullName>
    <description>The assessor’s document number for this lien. A unique transaction in many counties may be defined in the recorder’s books by a unique: record_book, record_page, record_doc.</description>
    <inlineHelpText>The assessor’s document number for this lien. A unique transaction in many counties may be defined in the recorder’s books by a unique: record_book, record_page, record_doc.</inlineHelpText>
    <label>Record doc</label>
    <length>40</length>
    <type>Text</type>
</CustomField>