force-app/main/default/objects/Property_Mortgage_lien_all__c/fields/RelatedProperty__c.field-meta.xml
<CustomField>
    <fullName>RelatedProperty__c</fullName>
    <label>RelatedProperty</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Property Mortgage liens all</relationshipLabel>
    <relationshipName>Property_Mortgage_liens_all</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>