force-app/main/default/objects/Property_Mortgage_lien_all__c/fields/stand_alone_refi__c.field-meta.xml
<CustomField>
    <fullName>stand_alone_refi__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the refinance occurred with no concurrent loans</description>
    <inlineHelpText>Whether the refinance occurred with no concurrent loans</inlineHelpText>
    <label>Stand alone refi</label>
    <type>Checkbox</type>
</CustomField>