force-app/main/default/objects/Property_Mortgage_lien_all__c/fields/thirty_yr__c.field-meta.xml
<CustomField>
    <fullName>thirty_yr__c</fullName>
    <description>The FRED 30-year mortgage rate at the the time of origination</description>
    <inlineHelpText>The FRED 30-year mortgage rate at the the time of origination</inlineHelpText>
    <label>Thirty YR</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>